# harqis-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  apps.env  apps_config.yaml  compose-up.bat  docker-compose.yaml  docker_compose.yaml  environment_variables.py  log_config_DEV.yaml  logging.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  settings.py  setup.py
.github/workflows/: main.yml  run_unit_tests.yml
apps/: apps_config.py
apps/gpt/: base.py
apps/sprout/: README.md  __init__.py  asgi.py  settings.py
apps/sprout_wf/: __init__.py  git_log.txt  sprout.py  wsgi.py
config/: __init__.py  app_config.py  environment_variables.py  loader.py
config/constants/: app_names.py  environment.py
config/tests/: unit_tests.py  unit_tests_app_config.py  unit_tests_config_loader.py
config/types/: __init__.py  json.py  yaml.py
contracts/: file.py
core/: .pre-commit-config.yaml  __init__.py  logging.yaml  pytest.ini  requirements.txt  run_tests.py
core/apps/: README.md  __init__.py  apps_config.py  config.py
core/codegen/: README.md
core/config/: README.md  app_config.py  app_config_manager.py  env_variables.py  environment_variables.py  loader.py
core/demo/: Dockerfile  README.md  __tpl_config.yaml  config.yaml  docker-compose.yaml  docker_compose.yaml  load_demo.py  pytest.ini  sample_config.yaml  set_env.bat  setup.py
core/docs/: FEATURES.md  SCRIPTS.md  TESTING.md  WORKFLOWS.md
core/exception/: error_wrapper.py
core/reports/: csv_report_generator.py
core/runners/: __init__.py  unit_tests_runner.py
core/scripts/: load_demo.py
core/utilities/: README.md  actions_logging.py  files.py  multiprocess.py  path.py  screenshot.py
core/web/: README.md
docs/: DEMO.md  FEATURES.md  INDEX.md  SCRIPTS.md  TESTING.md  TESTING_BOILERPLATE.md
docs/testing/: PROCESSES.md  STRATEGY.md  TOOLS.md
exception/: __init__.py  error_wrapper.py
exception/tests/: unit_tests.py
exceptions/: exception_handler.py
harqis-core/: run_tests.py
harqis-core/apps/: __init__.py
harqis-core/config/: __init__.py
harqis_core/config/: app_config.py
harqis_core/workflows/: __init__.py
reports/: csv_report_generator.py  report_generator.py
runners/: __init__.py  tests_runner.py  unit_tests_runner.py
runners/tests/: unit_tests.py
scripts/elastic/: README.md  manage.bat  manage.sh
scripts/n8n/: backup.bat  backup.sh  restore.bat  restore.sh
tests/: launcher.py  tests_exception_handler.py  webdriver.py
utilities/: __init__.py  apps_context.py  assert.py  celery_helper.py  config_loader.py  config_reader.py  csv_reader.py  csv_report_generator.py  custom_logger.py  json.py  json_util.py  logged_assert_helper.py  logger.py  login_config_reader.py  multiprocess.py  object_utils.py  qlist.py  string.py  work_status.py
utilities/asserts/: __init__.py  helper.py  messages.py  status.py
utilities/config/: __init__.py  loader.py
utilities/contracts/: file.py
utilities/data/: json.py  objects.py  qlist.py
utilities/data_helpers/: __init__.py  csv_reader.py  json.py  objects.py  qlist.py
utilities/logging/: custom_logger.py  inspect.py
utilities/resources/: loader.py
utilities/testing/: __init__.py
utilities/tests/: unit_tests_json_schema.py
web/: __init__.py
web/api/: SSHTelnetClient.py  __init__.py  base_steps.py  ssh_client.py  (+1 more)
workflows/: __init__.py
(+559 files in other folders)
