[project]
name = "harqis-core"
version = "0.1.0"
description = "Heuristic Automation for a Reliable Quality Integration System"
authors = [
    { name = "Brian Bartilet", email = "brian.bartilet@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"core.web.services.core.decorators" = ["py.typed", "*.pyi"]

[project.urls]
Homepage = "https://github.com/brianbartilet/harqis-core"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


